--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -248,7 +248,7 @@ Prolog facts make up a factbase that stores a table of architectural entities wi
 \end{verbatim}
 
 
-\chapter{Design Computing in a Constraint Logic Programming Framework}
+\chapter{Design Representation and Spatial Reasoning}
 This chapter presents the architectural design representation and spatial reasoning framework of the DSpace reasoner. It examines how architectural designs are modeled in a multiple perspective representation structure, and how architectural designs are reasoned about using qualitative spatial representation and reasoning techniques. The DSpace framework is written in the declarative programming semantics of Constraint Logic Programming (CLP) using Prolog, CLP over the Reals (CLP($\mathbb{R}$)), and Constraint Handling Rules (CHR).  
 
 The chapter is organized into two sections. The first section looks at how architectural design are represented in DSpace and how this representation model is implemented in the DSpace CLP framework. The second section looks at the DSpace spatial reasoner and how it is implemented as a series of spatial constraint solvers in the DSpace CLP framework.
